@@ -33,7 +33,7 @@ $authors = get_users_of_blog();
 				<?php } elseif (is_bool($option_meta[3])) { ?>
 					<th>&nbsp;</th>
 					<td><label<?php if ($option_meta[1]) echo ' class="required"'; ?>><input type="checkbox" value="1"<?php if ($current_value == 1) echo ' checked="checked"'; ?> name="<?php echo $option;?>" /> <?php echo htmlspecialchars($option_meta[0]);?></label>
-					<?php if ($option_meta[4]) { ?>
+					<?php if (@$option_meta[4]) { ?>
 					<div class="helptext"><?php echo $option_meta[4]; ?></div>
 					<?php } ?></td>
 				<?php } else { ?>
